src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Operative_Eligible__c</fullName>
        <description>Phase 1 National</description>
        <formula>IF(  AND(RecordType.Name = &quot;National&quot;,  NOT(ISPICKVAL(Active__c, &apos;&apos;)), NOT(ISPICKVAL(Type, &apos;&apos;))), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>An Account is Operative Eligible if it meets the following criteria:
- Record Type = National
- Active has a value
- Type has a value</inlineHelpText>
        <label>Operative Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operative_ID__c</fullName>
        <description>Phase 1 National</description>
        <externalId>true</externalId>
        <label>Operative ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operative_Owner__c</fullName>
        <label>Operative Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opted_Out_of_Transactions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-1841 | This checkbox means the vendor has explicitly opted out of the Transactions program</description>
        <inlineHelpText>This checkbox means the vendor has explicitly opted out of the Transactions program.</inlineHelpText>
        <label>Opted Out of Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Account_CBSS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-596 | If selected, allows for the Account CBSS field to be overridden to a different user than the Account Owner&apos;s CBSS.</description>
        <inlineHelpText>If selected, allows for the Account CBSS field to be overridden to a different user than the Account Owner&apos;s CBSS.</inlineHelpText>
        <label>Override Account CBSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnedByMe__c</fullName>
        <formula>Owner.Id = $User.Id</formula>
        <label>Owned By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <description>Plan to Deprecated for CSP-2731
Remove (deprecated) from Owner Full Name CSP-3060</description>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_390, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_390))+Owner.Id, Owner.LastName +&apos;,&apos;+Owner.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Age__c</fullName>
        <formula>TODAY() - Ownership_Changed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ownership_Changed_Date__c</fullName>
        <label>Ownership Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentAccountLocalPaidStatus__c</fullName>
        <formula>TEXT(Parent.Local_Paid_Status__c)</formula>
        <label>Parent Account Local Paid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnersAccountId__c</fullName>
        <description>SF-1402. Ticket description: this is a dependency for migration of Accounts from DCRM to SFDC. Field is pertinent to the migration effort. xo_vendorid field in DCRM will be mapped to this field.</description>
        <externalId>true</externalId>
        <label>PartnersAccountId</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnersProfileStatus__c</fullName>
        <description>Phase 1</description>
        <label>Partners Profile Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unclaimed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freemium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partners_Metadata__c</fullName>
        <label>Partners Metadata</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Past_Due_Balance__c</fullName>
        <description>This field holds the sum of past due balances of all the invoice associated with the account.</description>
        <label>Past Due Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Past_Due_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is enabled during the daily batch run if there are any invoice with outstanding balance associated with the particular customer.</description>
        <label>Past Due Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>CSP-1326</description>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Preview_1__c</fullName>
        <formula>IF(ISBLANK(Photo_URL_1__c),&quot;&quot;,IMAGE(Photo_URL_1__c, &quot;Photo preview&quot;,85,85))</formula>
        <inlineHelpText>Preview of email photo</inlineHelpText>
        <label>Photo Preview 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Preview_2__c</fullName>
        <formula>IF(ISBLANK(Photo_URL_2__c),&quot;&quot;,IMAGE(Photo_URL_2__c, &quot;Photo preview&quot;,85,85))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo Preview 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_Preview_3__c</fullName>
        <formula>IF(ISBLANK(Photo_URL_3__c),&quot;&quot;,IMAGE(Photo_URL_3__c, &quot;Photo preview&quot;,85,85))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo Preview 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photo_URL_1__c</fullName>
        <inlineHelpText>Used in email merges</inlineHelpText>
        <label>Photo URL 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo_URL_2__c</fullName>
        <label>Photo URL 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo_URL_3__c</fullName>
        <label>Photo URL 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <formula>IF( text(Local_Sales_Market__r.Country__c ) = &apos;CA&apos;, &apos;Senior Sales Executive&apos;, Text(Zip__r.Portfolio__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousOwner__c</fullName>
        <label>Previous Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category_Hubspot_Formula__c</fullName>
        <description>To Copy down the Primary Category and Sync it to Hubspot. SF-2356</description>
        <label>Primary Category Hubspot Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Category</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only active primary Categories may be selected</errorMessage>
            <filterItems>
                <field>Category__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Registry_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Registry Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Registry User</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Specialist_Email__c</fullName>
        <description>CSP-3057</description>
        <formula>IF(ISBLANK(Local_Sales_Market__r.Print_Specialist__c),&quot;printspecialist@theknot.com&quot;,Local_Sales_Market__r.Print_Specialist__r.Email)</formula>
        <label>Print Specialist Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Specialist_Phone__c</fullName>
        <description>CSP-3057</description>
        <formula>IF(ISBLANK(Local_Sales_Market__r.Print_Specialist__c),&quot;(402) 596-8489&quot;,Local_Sales_Market__r.Print_Specialist__r.Phone)</formula>
        <label>Print Specialist Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Specialist__c</fullName>
        <description>CSP-3057</description>
        <formula>if(isblank(Local_Sales_Market__r.Print_Specialist__c),&quot;Print Specialist&quot;,Local_Sales_Market__r.Print_Specialist__r.FirstName&amp;&apos; &apos; &amp;Local_Sales_Market__r.Print_Specialist__r.LastName)</formula>
        <label>Print Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privileged_Client_Feedback_Detail__c</fullName>
        <description>CSP-3220 Privileged text field for sales and service tracking of all feedback - good / bad / questions / comments / concerns regarding the acquisition</description>
        <inlineHelpText>Sales and service tracking of all feedback - good / bad / questions / comments / concerns regarding the acquisition.  Please note that this information is attorney client privileged/confidential.</inlineHelpText>
        <label>Privileged Client Feedback Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Privileged_Client_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-3220: Track vendors that have questions about the acquisition</description>
        <inlineHelpText>CSP-3220 Privileged field for sales and service tracking of all feedback - good / bad / questions / comments / concerns regarding the acquisition</inlineHelpText>
        <label>Privileged Client Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <description>Phase 1 National</description>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot Couture Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tentpole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Gen / Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concierge Venue</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promotional_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <label>Promotional Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotional_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-2898 Enable Discounts for a Promotional Period (Switch Pitch)</description>
        <label>Promotional Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualification_Status__c</fullName>
        <description>Plan to Deprecated for CSP-2731
SS-4761</description>
        <label>Qualification Status(deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Retain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the RSR of the Acct owner</description>
        <label>RSR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>RSR</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsRSR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RealWed__c</fullName>
        <description>Phase 1</description>
        <label>Real Weddings</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Reason_Details__c</fullName>
        <description>Plan to Deprecated for CSP-2731
SS-4761</description>
        <label>Reason Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReasonnotIn__c</fullName>
        <description>Plan to Deprecated for CSP-2731
Phase 1</description>
        <label>Reason for not including</label>
        <picklist>
            <controllingField>ConciergePrgQua__c</controllingField>
            <picklistValues>
                <fullName>Bad reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chain, bad reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No reviews</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a good fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Field used to map over the a converted Leads record type name and then appropriately assign the correct RecordTypeId before insert. Set to Long Area Text because of mapping issue error.</description>
        <label>Record Type Name</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>ACCT-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A system-generated id that uniquely identifies the record</inlineHelpText>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Plan to Deprecated for CSP-2731
Phase 1</description>
        <label>Region</label>
        <picklist>
            <controllingField>ConciergeState__c</controllingField>
            <picklistValues>
                <fullName>Appalachian Plateau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baltimore Suburb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Ridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Suburbs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central East FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Jersey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Pittsburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central West FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chesapeake Bay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coastal Plain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>​Dallas/Fort Worth​</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RegionalNational__c</fullName>
        <label>Regional-National</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regional_Pooling_NVM_Identifier__c</fullName>
        <description>CSP-2867 Regional Pooling Beta Signifier</description>
        <formula>IF(Owner.Strategy_Specialist__c = &apos;0053F000001WM6M&apos;, TEXT(Owner.Regional_Pooling_NVM_Identifier__c), &apos;&apos;)</formula>
        <label>Regional Pooling NVM Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Hot_Campagin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related Hot Campagin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_to_Paid_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related to Paid Media?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviews__c</fullName>
        <description>Phase 1</description>
        <inlineHelpText>Formerly labelled &quot;Reviews&quot;, this maps to the TK Storefront URL on Leads.</inlineHelpText>
        <label>TK Storefront</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SOR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOR(deprecated)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>Local_Core_Sales_Operations</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_SOR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Generated_GUID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salesforce Generated GUID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CSP-2061</description>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Registry_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Registry Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Registry User</value>
            </filterItems>
            <filterItems>
                <field>$Source.Primary_Registry_Owner__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Creative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traditionalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setting__c</fullName>
        <description>Phase 1</description>
        <label>Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Backyard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banquet Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brewery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm + Ranch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historic Venue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mosque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Track_Test__c</fullName>
        <description>SS-8333 A temporary field to handle the data</description>
        <label>Status Track Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StorefrontID__c</fullName>
        <label>Storefront ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storefront_Republish_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want to request an admin republish the Storefront.</inlineHelpText>
        <label>Storefront Republish Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Storefront_Status__c</fullName>
        <description>Field used to show the claimed status of the storefront associated to this Account through the dynamics Id.</description>
        <label>Storefront Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unclaimed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Claimed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategy_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Strategy_Specialist</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>